--- a/app.json
+++ b/app.json
@@ -30,6 +30,12 @@
     },
     "web": {
       "favicon": "./assets/images/favicon.png"
-    }
+    },
+    "plugins": [
+      "expo-font",
+      "expo-audio",
+      "expo-secure-store",
+      "expo-web-browser"
+    ]
   }
 }
