--- a/package.json
+++ b/package.json
@@ -6,75 +6,39 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "build:web": "expo export --platform web",
-    "deploy:testflight": "npx testflight --non-interactive"
+    "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~4.0.1",
-    "@expo/vector-icons": "*",
-    "@gorhom/bottom-sheet": "5.2.0",
-    "@react-native-async-storage/async-storage": "*",
-    "@react-native-community/datetimepicker": "8.4.1",
-    "@react-native-community/netinfo": "*",
-    "@react-native-community/slider": "4.5.6",
-    "@react-navigation/bottom-tabs": "*",
-    "@react-navigation/drawer": "*",
-    "@react-navigation/native": "*",
-    "@react-navigation/native-stack": "*",
-    "@shopify/flash-list": "1.7.6",
-    "@supabase/supabase-js": "*",
-    "date-fns": "*",
-    "expo": "^54.0.30",
-    "expo-audio": "~0.4.8",
-    "expo-auth-session": "~6.2.1",
-    "expo-av": "~15.1.7",
-    "expo-blur": "*",
-    "expo-camera": "~16.1.11",
-    "expo-clipboard": "~7.1.5",
-    "expo-constants": "~17.1.7",
-    "expo-contacts": "*",
-    "expo-crypto": "*",
-    "expo-document-picker": "*",
-    "expo-file-system": "~18.1.11",
-    "expo-font": "~13.3.1",
-    "expo-haptics": "*",
-    "expo-image": "~2.4.0",
-    "expo-image-manipulator": "*",
-    "expo-image-picker": "*",
-    "expo-linear-gradient": "~14.1.5",
-    "expo-linking": "~7.1.7",
-    "expo-location": "~18.1.6",
-    "expo-notifications": "~0.31.4",
-    "expo-router": "~5.0.6",
-    "expo-secure-store": "14.2.3",
-    "expo-sensors": "*",
-    "expo-sharing": "*",
-    "expo-splash-screen": "~0.30.8",
+    "@expo/metro-runtime": "~6.1.2",
+    "@react-native-picker/picker": "2.11.1",
+    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native-stack": "^7.3.10",
+    "expo": "^54.0.31",
+    "expo-audio": "~1.1.1",
+    "expo-blur": "~15.0.8",
+    "expo-haptics": "~15.0.8",
+    "expo-image": "~3.0.11",
+    "expo-linear-gradient": "~15.0.8",
+    "expo-router": "~6.0.21",
+    "expo-secure-store": "~15.0.8",
     "expo-status-bar": "*",
-    "expo-system-ui": "~5.0.7",
-    "expo-web-browser": "^14.2.0",
-    "lucide-react-native": "*",
-    "magically-sdk": "1.0.54",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-hook-form": "*",
-    "react-native": "0.79.2",
-    "react-native-gesture-handler": "~2.24.0",
-    "react-native-maps": "1.20.1",
-    "react-native-purchases": "^9.5.4",
-    "react-native-reanimated": "3.17.5",
-    "react-native-safe-area-context": "*",
-    "react-native-screens": "~4.11.1",
-    "react-native-svg": "15.11.2",
-    "react-native-web": "~0.20.0",
-    "react-native-webview": "*",
-    "sonner-native": "*",
-    "zustand": "*"
+    "expo-web-browser": "~15.0.10",
+    "lucide-react-native": "^0.562.0",
+    "magically-sdk": "^1.0.54",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "3.16.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-web": "^0.21.0",
+    "sonner-native": "^0.22.2",
+    "zustand": "^5.0.9",
+    "react-native-worklets-core": "1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.1.10",
     "typescript": "^5.3.3"
   },
   "private": true
