--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-picker/picker": "2.11.1",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
@@ -32,9 +33,9 @@
     "react-native-reanimated": "3.16.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-web": "^0.21.0",
+    "react-native-worklets-core": "1.3.3",
     "sonner-native": "^0.22.2",
-    "zustand": "^5.0.9",
-    "react-native-worklets-core": "1.3.3"
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
