--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "expo-image": "~3.0.11",
     "expo-linear-gradient": "~15.0.8",
     "expo-router": "~6.0.21",
-    "expo-secure-store": "~15.0.8",
+    "expo-secure-store": "^12.6.0",
     "expo-status-bar": "*",
     "expo-web-browser": "~15.0.10",
     "lucide-react-native": "^0.562.0",
