modified the entire system

--- a/app.json
+++ b/app.json
@@ -26,7 +26,11 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "life.magically.payvex"
+      "package": "life.magically.payvex",
+      "permissions": [
+        "android.permission.RECORD_AUDIO",
+        "android.permission.MODIFY_AUDIO_SETTINGS"
+      ]
     },
     "web": {
       "favicon": "./assets/images/favicon.png"
@@ -36,6 +40,11 @@
       "expo-audio",
       "expo-secure-store",
       "expo-web-browser"
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "ccf210e7-49cb-4e63-b006-3a3eeae3afef"
+      }
+    }
   }
 }
